# LocalScribe

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: android-build.yml  build-app.yml  build-sidecar.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
docs/: HANDOFF.md
docs/design_handoff_locallexis/: LocalLexis-standalone.html  LocalLexis.html  README.md  app.jsx  library-screen.md  primitives.jsx  progress-screen.md  screens.jsx  settings-screen.md  sidebar.jsx  spec.md  styles.css  watch-screen.md
docs/design_handoff_localscribe/: watch-screen.md
docs/superpowers/plans/: 2026-05-15-localscribe-desktop-ui.md  2026-05-15-speech-to-text-cli.md  2026-05-28-block-8.6-library-ui.md
docs/superpowers/specs/: 2026-05-15-stt-desktop-ui-design.md  (+2 more)
firmware/esp32-recorder/: README.md  platformio.ini
packaging/: Dockerfile.hub  README.md  locallexis-hub.service  locallexis-sidecar.spec  localscribe-sidecar.spec
speechtotext/: backend.py  cli.py  merger.py  models.py  pipeline.py  relabel.py
speechtotext/api/: __main__.py  app.py  auth.py  devices.py  jobs.py  library.py  library_db.py  pairing.py  reconcile.py  routes_config.py  routes_devices.py  routes_hub.py  routes_jobs.py  routes_models.py  routes_pairing.py  routes_sync.py  routes_transcripts.py  routes_watch.py  runner.py  secrets_store.py  server.py  storage.py  tls.py  watcher.py  workspace.py
speechtotext/asr/: base.py  faster_whisper.py
speechtotext/diarize/: pyannote.py
speechtotext/ingest/: file.py  mic.py  watch.py
tests/: conftest.py  test_backend.py  test_merger.py  test_models.py  test_pipeline.py  test_relabel.py  test_smoke.py
tests/api/: _signing.py  conftest.py  test_app.py  test_auth.py  test_devices.py  test_jobs.py  test_library_db.py  test_pairing.py  test_reconcile.py  test_replay.py  test_routes_config.py  test_routes_devices.py  test_routes_hub.py  test_routes_jobs.py  test_routes_sync.py  test_routes_transcripts.py  test_routes_watch.py  test_runner.py  test_secrets_store.py  test_server_headless.py  test_sidecar_cold_start.py  test_storage.py  test_storage_s3.py  test_tls.py  test_workspace.py
tests/asr/: test_faster_whisper.py  test_faster_whisper_lazy.py
tests/diarize/: test_pyannote.py
tests/fixtures/: generate_fixtures.py
tests/ingest/: test_file.py  test_mic.py  test_watch.py
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  test-setup.ts  updater.ts
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+93 files in other folders)
