[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speechtotext"
version = "0.1.0"
description = "Local privacy-preserving speech-to-text with speaker diarization."
requires-python = ">=3.11"
authors = [{ name = "Lieuwe Jongsma" }]
dependencies = [
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
stt = "speechtotext.cli:app"

[tool.setuptools.packages.find]
include = ["speechtotext*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
