[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speechtotext"
version = "0.5.2"
description = "Local privacy-preserving speech-to-text with speaker diarization."
requires-python = ">=3.11"
authors = [{ name = "Lieuwe Jongsma" }]
dependencies = [
    "faster-whisper>=1.0",
    "pyannote.audio>=4.0",
    "torch>=2.2",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.26",
    "watchdog>=4.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "httpx>=0.27",
]
packaging = [
    "pyinstaller>=6.0",
]

[project.scripts]
stt = "speechtotext.cli:app"

[tool.setuptools.packages.find]
include = ["speechtotext*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: end-to-end tests using real models (slow)"]
asyncio_mode = "auto"
